pkglib_LTLIBRARIES = libccontainers.la

libccontainers_la_CPPFLAGS = -I$(srcdir)/../include

libccontainers_la_SOURCES =	fifo.c \
							list.c \
							set.c \
							stack.c \
							tree.c \
							$(srcdir)/../include/fifo.h \
							$(srcdir)/../include/list.h \
							$(srcdir)/../include/set.h \
							$(srcdir)/../include/stack.h
							$(srcdir)/../include/tree.h
pkginclude_HEADERS = 	$(srcdir)/../include/fifo.h \
						$(srcdir)/../include/list.h \
						$(srcdir)/../include/set.h \
						$(srcdir)/../include/stack.h \
						$(srcdir)/../include/tree.h
